--- a/tax/package.json
+++ b/tax/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "chai": "4.1.1",
     "chai-http": "2.0.1",
-    "mocha": "2.4.5"
+    "mocha": "2.4.5",
+    "nock": "10.0.6"
   }
 }
